# build-libraries-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
